--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -16,6 +16,14 @@
   "author": "Team Old Allies",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "4.1.3",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^2.0.2",
+    "lite-server": "^2.3.0",
+    "nodemon": "^1.17.3",
+    "truffle": "5.0.2",
+    "truffle-contract": "3.0.6",
     "@craco/craco": "^6.3.0",
     "@react-spring/three": "^9.2.4",
     "@react-spring/web": "^9.2.4",
@@ -24,23 +32,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "autoprefixer": "^9.8.6",
-    "bootstrap": "4.1.3",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^2.0.2",
-    "lite-server": "^2.3.0",
-    "nodemon": "^1.17.3",
-    "postcss": "^7.0.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14",
     "three": "^0.132.2",
-    "truffle": "5.0.2",
-    "truffle-contract": "3.0.6",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -58,8 +61,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "dependencies": {
-    "react-router-dom": "^5.3.0"
   }
 }
